evaluator/sources/955059152.error
/eval-folder/955059152.cpp: In function 'int main()':
/eval-folder/955059152.cpp:6:1: error: expected ';' before '}' token
 }
 ^
